# japl

./: .dockerignore  .gitignore  .knowledge-base.md  PUBLISHING.md  README.md  install.sh
compiler/: Cargo.toml
compiler/c/: Makefile  test_runner
compiler/c/include/: japl_gc.h  japl_list.h  japl_mailbox.h  japl_map.h  japl_runtime.h  japl_scheduler.h  japl_string.h  japl_supervisor.h  japl_value.h
compiler/c/src/: japl_gc.c  japl_list.c  japl_mailbox.c  japl_map.c  japl_scheduler.c  japl_stdlib.c  japl_string.c  japl_supervisor.c  japl_value.c
compiler/c/test/: test_gc.c  test_mailbox.c  test_main.c  test_scheduler.c  test_supervisor.c  test_value.c
compiler/crates/japl-ast/: Cargo.toml
compiler/crates/japl-ast/src/: lib.rs  pretty.rs
compiler/crates/japl-checker/: Cargo.toml
compiler/crates/japl-checker/src/: effects.rs  env.rs  errors.rs  infer.rs  lib.rs  linearity.rs  unify.rs
compiler/crates/japl-codegen/: Cargo.toml
compiler/crates/japl-codegen/src/: env.rs  interpreter.rs  lib.rs
compiler/crates/japl-common/: Cargo.toml
compiler/crates/japl-common/src/: lib.rs
compiler/crates/japl-driver/: Cargo.toml
compiler/crates/japl-driver/src/: lib.rs  main.rs
compiler/crates/japl-ir/: Cargo.toml
compiler/crates/japl-ir/src/: lib.rs  lower.rs
compiler/crates/japl-lexer/: Cargo.toml
compiler/crates/japl-lexer/src/: lib.rs  token.rs
compiler/crates/japl-parser/: Cargo.toml
compiler/crates/japl-parser/src/: lib.rs
compiler/crates/japl-types/: Cargo.toml
compiler/crates/japl-types/src/: lib.rs
compiler/japl/: build.sh  runtime.ts
compiler/japl/src/: ast.japl  compiler.japl  emit.japl  lexer.japl  main.japl  parser.japl  token.japl  utils.japl
compiler/japl/test/: features.japl  simple.japl  types.japl
compiler/runtime/japl-runtime/: Cargo.toml
compiler/runtime/japl-runtime/src/: error.rs  gc.rs  lib.rs  mailbox.rs  process.rs  scheduler.rs  supervisor.rs  value.rs
compiler/runtime/japl-runtime/tests/: integration.rs
compiler/runtime/japl-stdlib/: Cargo.toml
compiler/self/: compiler.japl  test_lexer.japl
compiler/tests/: fibonacci.japl  hello.japl  pattern_match.japl  process.japl  types.japl
compiler/ts/: package-lock.json  package.json
compiler/ts/src/: index.ts
compiler/ts/src/cli/: build.ts  (+2 more)
japl/: Cargo.toml
japl/src/: main.rs  package.rs  serve.rs
japl/src/compiler/: checker.rs  emit_wat.rs  error.rs  formatter.rs  ir.rs  lexer.rs  lower.rs  mod.rs  parser.rs  token.rs  types.rs
japl/src/runtime/: distributed_host.rs  distribution.rs  engine.rs  host.rs  mod.rs  process.rs  scheduler.rs  wire.rs
(+450 files in other folders)
