[package]
name = "japl"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
wasmtime = "43"
wasmtime-wasi = "43"
anyhow = "1"
tiny_http = "0.12"
ureq = "2"
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
nats = "0.25"

[[bin]]
name = "japl"
path = "src/main.rs"
