[package]
name = "japl-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
japl-common.workspace = true
japl-ir = { path = "../japl-ir" }
japl-runtime = { path = "../../runtime/japl-runtime" }
japl-stdlib = { path = "../../runtime/japl-stdlib" }
thiserror.workspace = true

[dev-dependencies]
japl-ast.workspace = true
japl-parser.workspace = true
